# SO2_Projekt_1

./: README.md  wyniki10.txt
source/: CMakeLists.txt  heap.c  heap.h  main.c  makefile  tested_declarations.h  unit_test_v2.c
